Fixes video css overlap

--- a/app/stylesheets/screens/Work/screens/Campus/sections/_features.scss
+++ b/app/stylesheets/screens/Work/screens/Campus/sections/_features.scss
@@ -70,7 +70,7 @@
     }
   }
 }
-.video {
+.phone-video {
   position: absolute;
   top: percentage(200 / 1440);
   left: percentage(114 / 778);
